add email ticker
