# backend/docs/swagger.yaml
@@ -12,6 +12,11 @@ definitions:
       user_id:
         type: string
     type: object
+  propostahandler.StatusUpdatePayload:
+    properties:
+      status:
+        type: string
+    type: object
   propostarepo.Produto:
     properties:
       categoria:
@@ -137,15 +142,17 @@ paths:
       - application/json
       responses:
         "201":
-          description: created
+          description: Proposta criada com sucesso e ID retornado
           schema:
-            type: string
+            additionalProperties:
+              type: string
+            type: object
         "400":
-          description: body inválido
+          description: Body inválido
           schema:
             type: string
         "500":
-          description: erro ao salvar proposta
+          description: Erro ao salvar proposta
           schema:
             type: string
       summary: Cadastra nova proposta
@@ -188,6 +195,39 @@ paths:
       summary: Lista propostas do usuário
       tags:
       - trocas
+  /trocas/{id}/status:
+    put:
+      consumes:
+      - application/json
+      description: Altera o status da proposta (aceita, recusada, pendente)
+      parameters:
+      - description: ID da proposta
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Novo status
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/propostahandler.StatusUpdatePayload'
+      responses:
+        "204":
+          description: Atualizado com sucesso
+          schema:
+            type: string
+        "400":
+          description: Erro de validação
+          schema:
+            type: string
+        "500":
+          description: Erro interno
+          schema:
+            type: string
+      summary: Atualiza o status da proposta
+      tags:
+      - trocas
   /usuarios:
     post:
       consumes:
@@ -202,14 +242,20 @@ paths:
         schema:
           $ref: '#/definitions/usuariorepo.Usuario'
       produces:
-      - text/plain
+      - application/json
       responses:
         "201":
-          description: Usuário inserido com sucesso
+          description: Usuário inserido com sucesso e ID retornado
           schema:
-            type: string
+            additionalProperties:
+              type: string
+            type: object
         "400":
           description: Erro ao decodificar corpo da requisição
+          schema:
+            type: string
+        "409":
+          description: Já existe um cadastro com esse e-mail
           schema:
             type: string
         "500":
